<resources>
    <string name="app_name" translatable="false">TheSimpsonsDatabaseMobile</string>
    <string name="label" translatable="false">TheSimpsonsDatabaseMobile</string>
    <string name="description">Simple app to keep track of your watched episodes</string>
    <string name="search_episode">Search for episodes</string>
    <string name="search">Search</string>
    <string name="episode_hint">Episode name</string>
    <string name="open_button">Open</string>

    <string name="episode_name">Name:</string>
    <string name="premiere">Premiere:</string>
    <string name="screenplay">Screenplay:</string>
    <string name="direction">Directed by:</string>
    <string name="watched">Watched:</string>
    <string name="watched_on">Yes ✔️</string>
    <string name="watched_off">No ❌</string>
    <string name="view_details">Details</string>
    <string name="plot">Plot:</string>

    <string name="settings">Settings</string>
    <string name="api_address">API Address</string>
    <string name="api_key">API Key</string>
    <string name="lang_code">API Language</string>

    <string name="no_api">Server address is not configured!</string>
    <string name="no_key">No API key provided!</string>


    <string name="picker">Episode Selection</string>
    <string name="episode">Episode</string>


    <string name="error">Something went wrong!</string>
    <string name="json_error">A JSON Error occurred!</string>
    <string name="error_404">Resource not found!</string>
    <string name="error_500">Internal server error occurred!</string>
    <string name="error_401">Invalid authorization!</string>
    <string name="error_400">Invalid query!</string>
    <string name="error_429">Too many requests!</string>
    <string name="no_internet">Cannot connect to the server!</string>
    <string name="not_filled">Please fill in required fields!</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="season_prefix">S:</string>
    <string name="episode_prefix">E:</string>
    <string name="bynumber">Search by number</string>
    <string name="byname">Search by name</string>
    <string name="close">Close</string>
</resources>